// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render and match snapshot 1`] = `
<div
  className="search"
  onScroll={[Function]}
>
  <div
    className="search__header"
  >
    Showing results for "
    hello kitty
    "
  </div>
  <div
    className="search__result"
  >
    <VideoListItem
      key="0"
      videoDetail={Object {}}
    />
    <VideoListItem
      key="1"
      videoDetail={Object {}}
    />
    <VideoListItem
      key="2"
      videoDetail={Object {}}
    />
  </div>
</div>
`;

exports[`SearchResult should render and match snapshot on empty result 1`] = `
<div
  className="search"
  onScroll={[Function]}
>
  <div
    className="search__result"
  >
    <div>
      Search videos by any keyword
    </div>
  </div>
</div>
`;

exports[`SearchResult should render and match snapshot on error 1`] = `
<div
  className="searchError"
>
  Ahh.. Something is not right !!
</div>
`;
